Enable Deepsource Secrets Analyzer

--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,3 +6,6 @@ enabled = true
 
   [analyzers.meta]
   import_root = "github.com/deepsourcelabs/graphql"
+[[analyzers]]
+name = "secrets"
+enabled = true
